# readwise-notebooklm-agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
docs/: agent-playbook.md  domain-scoring.md  readwise-cli-backend-plan.md
examples/: domains.robotics-sim2real.sample.json
src/readwise_notebooklm_agent/: __init__.py  deepdive.py  dev.py  readwise_backend.py  skills.py  triage.py
src/readwise_notebooklm_agent/skill_templates/readwise-notebooklm-deepdive/: SKILL.md
tests/: test_helpers.py  test_readwise_backend.py
