[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "readwise-notebooklm-agent"
version = "0.1.4"
description = "Agent-first Readwise Reader triage and one-source NotebookLM deep-dive helpers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yujeongdev" }]
keywords = ["readwise", "reader", "notebooklm", "obsidian", "agents", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = []

[project.scripts]
readwise-api-triage = "readwise_notebooklm_agent.triage:main"
readwise-nlm-deepdive = "readwise_notebooklm_agent.deepdive:main"
readwise-notebooklm-check = "readwise_notebooklm_agent.dev:check"
readwise-notebooklm-install-skills = "readwise_notebooklm_agent.skills:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readwise_notebooklm_agent"]
